--- a/index.html
+++ b/index.html
@@ -27,31 +27,34 @@
         </div>
     </div>
 
-    <div class="vez-de-jogar">
-        <p>É a vez do jogador 1</p>
+    <div class="placar">
+        <p class="palavra-voce">Jogador 1</p>
+        <p id="vitoria-jogador-um">0</p>
+        <p>:</p>
+        <p id="vitoria-jogador-dois">0</p>
+        <p class="palavra-computador">Jogador 2</p>
     </div>
+
+    <div class="vez-de-jogar"></div>
 
     <div class="jogo">
         <div class="items">
+            <div class="quadrado" id="quadrado0"></div>
             <div class="quadrado" id="quadrado1"></div>
             <div class="quadrado" id="quadrado2"></div>
-            <div class="quadrado" id="quadrado3"></div>
         </div>
         <div class="items">
+            <div class="quadrado" id="quadrado3"></div>
             <div class="quadrado" id="quadrado4"></div>
             <div class="quadrado" id="quadrado5"></div>
-            <div class="quadrado" id="quadrado6"></div>
         </div>
         <div class="items">
+            <div class="quadrado" id="quadrado6"></div>
             <div class="quadrado" id="quadrado7"></div>
             <div class="quadrado" id="quadrado8"></div>
-            <div class="quadrado" id="quadrado9"></div>
-        </div>
-
-        <div class="resultado">
-            <p class="ganhador"></p>
         </div>
     </div>
+
 
     <script src="./script.js"></script>
 </body>
