arrumando mobile, inserindo placar e vez do jogador

--- a/index.html
+++ b/index.html
@@ -27,12 +27,16 @@
         </div>
     </div>
 
+    <div class="vitorioso">
+        <p class="texto-vitoria">Pronto para começar?</p>
+    </div>
+
     <div class="placar">
-        <p class="palavra-voce">Jogador 1</p>
+        <p class="jogador-um">Jogador 1</p>
         <p id="vitoria-jogador-um">0</p>
         <p>:</p>
         <p id="vitoria-jogador-dois">0</p>
-        <p class="palavra-computador">Jogador 2</p>
+        <p class="jogador-dois">Jogador 2</p>
     </div>
 
     <div class="vez-de-jogar"></div>
@@ -54,7 +58,6 @@
             <div class="quadrado" id="quadrado8"></div>
         </div>
     </div>
-
 
     <script src="./script.js"></script>
 </body>
